# junbun

./: .dockerignore  Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml  render.yaml  requirements.txt
blog/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_post_published_date.py  0003_post_text.py  0004_post_summary_alter_post_text.py  0005_post_author.py  0006_alter_post_author.py  0007_announcement.py  0008_post_is_draft.py  0009_post_is_published.py  0010_post_wordcloud_image.py  0011_alter_post_author.py  0012_remove_post_author_remove_post_content_and_more.py
blog/templates/blog/: about.html  announcement_detail.html  announcement_list.html  contact.html  delete_post.html  edit_post.html  guidelines.html  mypage.html  post_detail.html  post_form.html  post_list.html
blog/templates/registration/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: chat_list.html
junbun/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: preview.js
staticfiles/css/: style.css
