[project]
name = "junbun"
version = "0.1.0"
description = ""
authors = [
    {name = "Toma Ryu",email = "tma951070@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
